--- a/blog/2021-10-01-mdx-blog-post.mdx
+++ b/blog/2021-10-01-mdx-blog-post.mdx
@@ -1,11 +1,13 @@
 ---
 slug: mdx-blog-post
-title: MDX Blog Post
-authors: [slorber]
+title: MDX Blog Post 작성하기
+authors: [positiveko]
 tags: [docusaurus]
 ---
 
 Blog posts support [Docusaurus Markdown features](https://docusaurus.io/docs/markdown-features), such as [MDX](https://mdxjs.com/).
+
+MDX 문법을 지원하기 때문에 아래와 같이 컴포넌트를 넣어 작성하실 수 있습니다!
 
 :::tip
 
