--- a/blog/2021-12-07-welcome/index.mdx
+++ b/blog/2021-12-07-welcome/index.mdx
@@ -1,11 +1,11 @@
 ---
 slug: member
 title: Member
-authors: [positiveko, Xednicoder, gyuseok-dev, shinyeong]
+authors: [positiveko, saengmotmi, Woongjo-Yoo, Mengkki]
 tags: [member, introduce]
 ---
 
-import logo from './scope-logo.png';
+import logo from './refactoring.jpg';
 
 <img src={logo} width='50%' styles='max-width: 512px;' />
 
