--- a/docs/chapter_1.mdx
+++ b/docs/chapter_1.mdx
@@ -4,6 +4,6 @@ sidebar_position: 1
 
 import Authors from './Authors.tsx';
 
-# 1장 깨끗한 코드
+# 1장 리팩터링: 첫 번째 예시
 
-<Authors bookLeader='Xednicoder' />
+<Authors bookLeader='saengmotmi' />
