Add: 2장 - 리팩터링 원칙

--- a/docs/chapter_1.mdx
+++ b/docs/chapter_1.mdx
@@ -2,8 +2,8 @@
 sidebar_position: 1
 ---
 
-import Authors from './Authors.tsx';
+import Authors from "./Authors.tsx";
 
 # 1장 리팩터링: 첫 번째 예시
 
-<Authors bookLeader='saengmotmi' />
+<Authors bookLeader="saengmotmi" />
