1장 마무리 추가

--- a/docs/chapter_1.mdx
+++ b/docs/chapter_1.mdx
@@ -602,3 +602,15 @@ function createStatementData(invoice, plays) {
   }
 }
 ```
+
+## 마무리
+
+위 예제에서 우리는 여러가지 자잘한 리팩터링 기법의 단계를 밟으며 코드를 고쳐나갔다. 한번에 코드를 새로 짜는 것이 아니라, 최종적으로는 사라질 함수라도 중간 단계로서 코드를 정리하는데 필요하다면 단계별로 정리하면서 나아갔다.
+
+위에서 진행한 리팩터링은 크게 세 단계로 진행됐다.
+
+1. 원본 함수를 중첩 함수 여러 개로 나눴다
+2. 단계 쪼개기를 적용해서 계산 코드와 출력 코드를 분리했다
+3. 계산 로직을 다형성으로 표현했다
+
+이번 예시를 통해 앞으로 진행할 리팩터링이 어떤 단계로, 어떤 리듬으로 진행되는지 감을 잡았기를 바란다.
