edit: logo및 favicon 수정

--- a/blog/2021-12-07-welcome/index.mdx
+++ b/blog/2021-12-07-welcome/index.mdx
@@ -5,7 +5,7 @@ authors: [positiveko, saengmotmi, Woongjo-Yoo, Mengkki]
 tags: [member, introduce]
 ---
 
-import logo from './refactoring.jpg';
+import logo from './logo.png';
 
 <img src={logo} width='50%' styles='max-width: 512px;' />
 
