--- a/blog/2021-12-07-welcome/index.mdx
+++ b/blog/2021-12-07-welcome/index.mdx
@@ -1,7 +1,7 @@
 ---
 slug: member
 title: Member
-authors: [positiveko, saengmotmi, Woongjo-Yoo, Mengkki]
+authors: [positiveko, saengmotmi, Woongjo-Yoo, Mengkki, Danbi]
 tags: [member, introduce]
 ---
 
