--- a/docs/chapter_3-2.mdx
+++ b/docs/chapter_3-2.mdx
@@ -11,13 +11,13 @@ import Authors from './Authors.tsx';
 ---
 자세한 해결 방법은 나중에 나오게 되니 지금은 우선 어떤 경우에서 악취가 나는지를 중점적으로 알아보면 좋을 것 같다.
 
-3.##13. 반복문 Loops
+## 3.13. 반복문 Loops
 
 자바스크립트는 일급 함수를 지원
 
 반복문을 파이프라인으로 바꾸자. 
 
-`filter`, `map` 같은 파이프라인 연산을 이용해 각 원소들이 어떠헥 처리되는지 명확하게 나타내자. 
+`filter`, `map` 같은 파이프라인 연산을 이용해 각 원소들이 어떻게 처리되는지 명확하게 나타내자. 
 
 ## 3.14 성의 없는 요소 Lazy Elements
 
@@ -95,7 +95,7 @@ console.log(reportAutoGenerator.report(aPerson));
 
 하나의 클래스가 너무 많은 일을 하려다보면 필드 수가 늘어나게 되고, 중복 코드도 늘어나기 쉽다. 
 
-이럴 땐 같은 prefix, postfix 를 가진 필드를 따로 추출하여 분리된 컴포넌트로 만든다. 
+이럴 땐 같은 prefix, suffix 를 가진 필드를 따로 추출하여 분리된 컴포넌트로 만든다. 
 
 컴포넌트를 분리할 때 그 특성에 따라 super 클래스로 만들거나 sub 클래스로 만들 수도 있다. 
 
