--- a/docs/chapter_4.mdx
+++ b/docs/chapter_4.mdx
@@ -172,7 +172,7 @@ it('change production', () => {
 
 어쨋거나 it 구문 하나 당 하나를 검증하도록 하는 것이 좋다. 
 
-### 결계 조건 검사하기
+### 경계 조건 검사하기
 
 **성공 - 실패 - 이상한 값 테스트 하기**
 
