feat: chapter 6 내용 추가

--- a/docs/chapter_5.mdx
+++ b/docs/chapter_5.mdx
@@ -10,7 +10,7 @@ import Authors from './Authors.tsx';
 
 6장부터 12장까지는 저자가 안전하고 효율적으로 리팩터링하는 방법을 노트에 정리한 내용을 담습니다.
 
-### 5-1 리팩터링 설명 형식
+## 5-1 리팩터링 설명 형식
 
 카탈로그의 리팩터링 기법들은 일정한 형식을 갖습니다.
 
@@ -26,7 +26,7 @@ import Authors from './Authors.tsx';
 | 절차 | 해당 리팩터링에 대한 구체적인 단계   |
 | 사례 | 간단한 사례 | 
 
-### 5-2 리팩터링 기법 선정 기준
+## 5-2 리팩터링 기법 선정 기준
 
 이 카탈로그는 완벽하지 않습니다. 저자가 생각하기에 가장 유용한 것들만 담았습니다.
 따로 기록해둘 필요가 없을 정도로 간단하고 직관적인 리팩터링 기법은 생략합니다.
