edit: 6장 오탈자 수정

--- a/docs/chapter_6-1.mdx
+++ b/docs/chapter_6-1.mdx
@@ -19,7 +19,7 @@ import Authors from './Authors.tsx';
 
 ### 절차
 
-1. 함수를 새로 만들고 목적을 잘 드러낸느 이름을 붙인다. ('어떻게'가 아닌 '무엇을' 하는지가 드러나야 한다.)
+1. 함수를 새로 만들고 목적을 잘 드러내는 이름을 붙인다. ('어떻게'가 아닌 '무엇을' 하는지가 드러나야 한다.)
 2. 추출할 코드를 원본 함수에서 복사하여 새 함수에 붙여넣는다.
 3. 추출한 코드 중 원본 함수의 지역 변수를 참조하거나 추출한 함수의 유효범위를 벗어나는 변수는 없는지 검사한다. 있다면 매개변수로 전달한다.
 4. 변수를 다 처리했다면 컴파일한다.
