--- a/docs/13_chapter_8-2.mdx
+++ b/docs/13_chapter_8-2.mdx
@@ -105,7 +105,7 @@ discount = discountableUnits * pricingPlan.discountFactor;
 if (order.isRepeat) discount += 20; // 다음 코드에서 상태를 수정한 변수 discount를 참조하기 때문에 아래로 이동할 수 없다.
 // highlight-next-line
 charge = baseCharge + units * chargePerUnit; // 공통된 상태를 수정하지 않으므로 여기까지 이동할 수 있다.
-charge = charge - discount; // 다음 코드에서 마찬가지로 참조하기 때문에 아래로이동할 수 없다.
+charge = charge - discount; // 다음 코드에서 마찬가지로 참조하기 때문에 아래로 이동할 수 없다.
 chargeOrder(charge);
 ```
 
@@ -120,7 +120,7 @@ a = 1 + 10;
 a = a + 5;
 ```
 
-슬라이드가 안전한 지를 판단하려면 관련된 연산이 무엇인고 구성이 어떻게 되었는지를 완벽히 이해해야 한다. 상태 갱신이 중요하므로 상태 갱신하는 코드 자체를 최대한 제거하는 것이 좋다.
+슬라이드가 안전한 지를 판단하려면 관련된 연산이 무엇이고 구성이 어떻게 되었는지를 완벽히 이해해야 한다. 상태 갱신이 중요하므로 상태 갱신하는 코드 자체를 최대한 제거하는 것이 좋다.
 따라서 슬라이드를 하기 전에 변수를 쪼개어서 시도하는 것이 좋다.
 
 #### 예시 2) 조건문이 있을 때의 슬라이드
@@ -184,7 +184,7 @@ Split Loop
 
 ### 배경
 
-- 반복문 하나에서 두 가지 일을 수행할 때 바복문을 수정해야 할 때마다 두 가지 일 모두를 잘 이해해야 한다. 하지만 쪼개어 분리하면 수정할 동작 하나만 이해하면 된다.
+- 반복문 하나에서 두 가지 일을 수행할 때 반복문을 수정해야 할 때마다 두 가지 일 모두를 잘 이해해야 한다. 하지만 쪼개어 분리하면 수정할 동작 하나만 이해하면 된다.
 - 반복문을 두 번 실행해야 하므로 이 리팩터링이 불편할 수도 있지만, 리팩터링과 최적화를 구분하자. 최적화는 코드를 깔끔히 정리한 이후에 수행하자. 오히려 반복문 쪼개기가 더 강력한 최적화를 하도록 도와주기도 한다.
 
 ### 절차
