--- a/docs/17_chapter_12-1.mdx
+++ b/docs/17_chapter_12-1.mdx
@@ -16,17 +16,17 @@ import Authors from './Authors.tsx';
 class Employee {...}
 
 class Salesperson extends Employee {
-    get name() {...}
+  get name() {...}
 }
 
 class Engineer extends Employee {
-    get name() {...}
+  get name() {...}
 }
 ```
 
 ```js
 class Employee {
-    get name() {...}
+  get name() {...}
 }
 
 class Salesperson extends Employee {...}
@@ -49,12 +49,12 @@ class Engineer extends Employee {...}
 1. 두 서브 클래스에서 같은 일을 수행하는 메서드를 찾는다.
 ```js title='Employee 클래스(Party 상속)'
 get annualCost() {
-    return this.monthlyCost * 12;
+  return this.monthlyCost * 12;
 }
 ```
 ```js title='Department 클래스 (Party 상속)'
 get totalAmount() {
-    return this.monthlyCost * 12;
+  return this.monthlyCost * 12;
 }
 ```
 
@@ -63,14 +63,14 @@ get totalAmount() {
 
 ```js title='Department 클래스'
 get annualCost() {
-    return this.monthlyCost * 12;
+  return this.monthlyCost * 12;
 }
 ```
 
 4. 서브클래스 중 하나의 메서드를 복사해 슈퍼클래스에 붙여넣는다.
 ```js title='Party 클래스'
 get annualCost() {
-    return this.monthlyCost * 12;
+  return this.monthlyCost * 12;
 }
 ```
 
@@ -130,10 +130,10 @@ class Party {...}
 
 class Employee extends Party {
   constructor(name, id, monthlyCost) {
-    super();
-    this._id = id;
-    this._name = name;
-    this._monthlyCost = monthlyCost;
+  super();
+  this._id = id;
+  this._name = name;
+  this._monthlyCost = monthlyCost;
   }
 }
 ```
@@ -141,15 +141,15 @@ class Employee extends Party {
 ```js
 class Party {
   constructor(name){
-    this._name = name;
+  this._name = name;
   }
 }
 
 class Employee extends Party {
   constructor(name, id, monthlyCost) {
-    super(name);
-    this._id = id;
-    this._monthlyCost = monthlyCost;
+  super(name);
+  this._id = id;
+  this._monthlyCost = monthlyCost;
   }
 }
 ```
@@ -173,20 +173,20 @@ class Employee extends Party {
 
 ```js title='class Party{}'
 class Employee extends Party {
-    constructor(name, id, monthlyCost) {
-        super();
-        this._id = id;
-        this._name = name;
-        this._monthlyCost = monthlyCost;
-    }
+  constructor(name, id, monthlyCost) {
+  super();
+  this._id = id;
+  this._name = name;
+  this._monthlyCost = monthlyCost;
+  }
 }
 
 class Department extends Party {
-    constructor(name, staff) {
-        super();
-        this._name = name;
-        this._staff = staff;
-    }
+  constructor(name, staff) {
+  super();
+  this._name = name;
+  this._staff = staff;
+  }
 }
 ```
 
@@ -194,13 +194,13 @@ class Department extends Party {
 
 ```js 
 class Employee extends Party {
-    constructor(name, id, monthlyCost) {
-        super();
-        // highlight-next-line
-        this._name = name;
-        this._id = id;
-        this._monthlyCost = monthlyCost;
-    }
+  constructor(name, id, monthlyCost) {
+  super();
+  // highlight-next-line
+  this._name = name;
+  this._id = id;
+  this._monthlyCost = monthlyCost;
+  }
 }
 ```
 
@@ -213,22 +213,22 @@ costructor(name) {
 
 ```js
 class Employee extends Party {
-    constructor(name, id, monthlyCost) {
-      // highlight-next-line
-        super(name);
-        this._id = id;
-        this._name = name;
-        this._monthlyCost = monthlyCost;
-    }
+  constructor(name, id, monthlyCost) {
+  // highlight-next-line
+  super(name);
+  this._id = id;
+  this._name = name;
+  this._monthlyCost = monthlyCost;
+  }
 }
 
 class Department extends Party {
-    constructor(name, staff) {
-      // highlight-next-line
-        super(name);
-        this._name = name;
-        this._staff = staff;
-    }
+  constructor(name, staff) {
+  // highlight-next-line
+  super(name);
+  this._name = name;
+  this._staff = staff;
+  }
 }
 ```
 
@@ -353,10 +353,10 @@ function createEmployee(name, type) {
 ```js
 function createEmployee(name, type) {
   switch (type) {
-    case "engineer": return new Engineer(name);
-    case "salesman": return new Salesman(name);
-    case "manager":  return new Manager (name);
-  }
+  case "engineer": return new Engineer(name);
+  case "salesman": return new Salesman(name);
+  case "manager":  return new Manager (name);
+}
 ```
 
 ### 배경
@@ -370,8 +370,202 @@ function createEmployee(name, type) {
 
 예를 들어 전자라면 직원의 하위 타입인 엔지니어를 만든다. 
 반면 후자는 직원에게 직원 유형 '속성'을 부여하고 이 속성을 클래스로 정의해서 엔지니어 속성과 관리자 속성 같은 서브클래스를 만드는 식이다.
+대상 클래스를 직접 서브클래싱하는 게 간단하지만 업무 유형을 다른 용도로 쓰고 싶을 때 그럴 수 없다는 단점이 있다.
+또한 유형이 불변일 때도 직접 서브클래싱 방식은 이용할 수 없다. 이 때에는 먼저 타입 코드에 기본형을 객체로 바꾸기를 적용하여 직원 유형 클래스를 만든 다음, 이 리팩터링을 적용한다.
 
+### 절차
+1. 타입 코드 필드를 자가 캡슐화 한다.
+2. 타입 코드 값 하나를 선택하여 그 값에 해당하는 서브클래스를 만든다. 타입 코드 게터 메서드를 오버라이드하여 해당 타입 코드의 리터럴 값을 반환하게 한다.
+3. 매개변수로 받은 타입 코드와 방금 만든 서브클래스를 매핑하는 선택 로직을 만든다.
+4. 테스트한다.
+5. 타입 코드 값 각각에 대해 서브클래스 생성과 선택 로직 추가를 반복한다. 클래스 하나가 완성될 때마다 테스트한다.
+6. 타입 코드 필드를 제거한다.
+7. 테스트한다.
+8. 타입 코드 접근자를 이용하는 메서드 모두에 메서드 내리기와 조건부 로직을 다형성으로 바꾸기를 적용한다.
 
+### 예시: 직접 상속할 때
+```js title='class Employee'
+constructor(name, type) {
+  this.validateType(type);
+  this._name = name;
+  this._type = type;
+}
+
+validateType(arg) {
+  if (!['engineer', 'manager', 'salesperson'].includes(arg)) {
+    throw new Error(`${arg}라는 직원 유형은 없다.`)
+  }
+}
+toString() {return `${this._name} ${this._type}`;}
+```
+
+1) 타입 코드 변수를 자가 캡슐화 한다.
+```js title='class Employee'
+get type() {return this._type;}
+// highlight-next-line
+toString() {return `${this._name} ${this.type}`;}
+```
+
+2) 타입 코드 중에 엔지니어를 선택해서 직접 상속 방식으로 구현하자. 즉, 직원 클래스 자체를 서브클래싱한다.
+타입 코드 게터를 오버라이드하여 적절한 리터럴 값을 반환하기만 하면 된다.
+```js
+class Engineer extends Employee {
+  get type() {return 'engineer';}
+}
+```
+
+자바스크립트의 생성자는 객체를 반환할 수 있지만 선택 로직을 생성자에 넣으려 하면 필드 초기화와 로직이 꼬여서 엉망이 될 것이다.
+그러니 생성자를 팩터리 함수로 바꿔서 선택 로직을 담을 별도 장소를 마련한다.
+
+```js
+function createEmployee(name, type) {
+  return new Employee(name, type);
+}
+```
+
+새로 만든 서브클래스를 사용하기 위한 선택 로직을 팩터리에 추가한다.
+
+```js
+function createEmployee(name, type) {
+  switch (type) {
+    case 'engineeer': return new Engineer(name, type);
+  }
+  return new Employee(name, type);
+}
+```
+
+4) 테스트한다. 저자는 편집증이 있어서.. 엔지니어 클래스에서 오버라이드한 게터가 일부러 틀린 값을 반환하게 한 다음 실패하도록 테스트해서 체크한다고 한다.
+5) 남은 유형에도 같은 작업을 반복한다.
+```js
+class Salesperson extends Employee {
+  get type() {return 'salesperson';}
+}
+
+class Manager extends Employee {
+  get type() {return 'manager';}
+}
+
+function createEmployee(name, type) {
+  switch (type) {
+    case 'engineer': return new Engineer(name, type);
+    case 'salesperson': return new Salesperson(name, type);
+    case 'manager': return new Manager(name, type);
+  }
+  return new Employee(name, type);
+}
+```
+
+6) 모든 유형에 적용했다면 타입 코드 필드와 슈퍼클래스의 게터를 제거한다.
+```js title='class Employee'
+constructor(name, type) {
+  this.validateType(type);
+  this._name = name;
+}
+
+toString() {return `${this._name} ${this.type}`;}
+```
+
+7) 테스트한 후 검증 로직도 제거한다. 생성자에 건네는 타입 코드 인수도 없애버린다.
+```js title='class Employee'
+constructor(name) {
+  this._name = name;
+}
+
+function createEmployee(name, type) {
+  switch (type) {
+    case 'engineer': return new Engineer(name, type);
+    case 'salesperson': return new Salesperson(name, type);
+    case 'manager': return new Manager(name, type);
+    default: throw new Error(`${arg}라는 직원 유형은 없다.`)
+  }
+}
+```
+
+### 예시: 간접 상속할 때
+이번에는 직원의 서브클래스로 '아르바이트'와 '정직원'이라는 클래스가 이미 있어서 Employee를 직접 상속하는 방식으로는
+타입 코드 문제에 대처할 수 없다고 가정하자. 직원 유형을 변경하는 기능을 유지하고 싶다는 점도 직접 상속을 사용하지 않는 이유가 된다.
+
+```js title='class Employee'
+constructor(name, type) {
+  this.validateType(type);
+  this._name = name;
+  this._type = type;
+}
+
+validateType(arg) {
+  if (!['engineer', 'manager', 'salesperson'].includes(arg)) {
+    throw new Error(`${arg}라는 직원 유형은 없다.`)
+  }
+}
+get type() {return this._type;}
+set type(arg) {this._type = arg;}
+
+get capitalizedType() {
+  return this._type.charAt(0).toUpperCase() + this._type.substr(1).toLowerCase();
+}
+toString() {return `${this._name} ${this.capitalizedType}`;}
+```
+
+1) 첫 번째로 타입 코드를 객체로 바꾼다.
+```js
+class EmployeeType {
+  constructor(aString) {
+    this._value = aString;
+  }
+  toString() {return this._value;}
+}
+```
+
+```js title='class Employee' 
+constructor (name, type) {
+  this.validateType(type);
+  this._name = name;
+  this.type = type;
+}
+
+validateType(arg) {
+  if (!['engineer', 'manager', 'salesperson'].includes(arg)) {
+    throw new Error(`${arg}라는 직원 유형은 없다.`)
+  }
+}
+get typeString() {return this._type.toString();}
+get type() {return this._type;}
+set type(arg) {this._type = new EmployeeType(arg);}
+
+get capitalizedType() {
+  return this._type.charAt(0).toUpperCase()
+   + this._type.substr(1).toLowerCase();
+}
+toString() {return `${this._name} ${this.capitalizedType}`;}
+```
+
+이제 차분히 리팩터링하기..
+
+```js title='class Employee'
+set type(arg) {this._type = Employee.createEmployee(arg);}
+static createEmployee(aString) {
+  switch (type) {
+    case 'engineer': return new Engineer(name, type);
+    case 'salesperson': return new Salesperson(name, type);
+    case 'manager': return new Manager(name, type);
+    default: throw new Error(`${arg}라는 직원 유형은 없다.`)
+  }
+}
+
+class EmployeeType {
+ // 제거하지 않고 다양하 서브클래스 사이의 관계를 명확히 알려주기 위해 놔둔다.
+}
+class Engineer extends EmployeeType {
+  toString() {return 'engineer';}
+}
+class Manager extends EmployeeType {
+  toString() {return 'manager';}
+}
+class Salesperson extends EmployeeType {
+  toString() {return 'salesperson';}
+}
+
+```
 
 #### references
 [이미지 출처](https://refactoring.com/catalog)
